// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`map actions should create an action to reset center 1`] = `
Object {
  "payload": undefined,
  "type": "[3] map/reset-map",
}
`;

exports[`map actions should create an action to set center 1`] = `
Object {
  "payload": Array [
    0,
    0,
  ],
  "type": "[2] map/set-center",
}
`;

exports[`map actions should create an action to set center 2`] = `
Object {
  "payload": Array [
    500,
    100,
  ],
  "type": "[2] map/set-center",
}
`;

exports[`map actions should create an action to set center 3`] = `
Object {
  "payload": Array [
    100,
    500,
  ],
  "type": "[2] map/set-center",
}
`;

exports[`map actions should create an action to set resolution 1`] = `
Object {
  "payload": 0,
  "type": "[4] map/set-resolution",
}
`;

exports[`map actions should create an action to set resolution 2`] = `
Object {
  "payload": 5,
  "type": "[4] map/set-resolution",
}
`;

exports[`map actions should create an action to set resolution 3`] = `
Object {
  "payload": 100,
  "type": "[4] map/set-resolution",
}
`;
